osd/ECBackend: don't get result code of subchunk-read overwritten

Fixes: http://tracker.ceph.com/issues/21769

Signed-off-by: songweibin <song.weibin@zte.com.cn>
(cherry picked from commit 66bfaaca20e1a4e61e523aa260d60ce368f66df2)

Conflicts:
	src/osd/ECBackend.cc
- mimic has assert() where master has ceph_assert()